argocd/infra/minio/base/httproute-console.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - minio.127.0.0.1.nip.io
  rules:
    - backendRefs:
        - name: minio-console
          port: 9090
      matches:
        - path:
            type: PathPrefix
            value: /
